--- a/scss/vertigo/effects/_caption.scss
+++ b/scss/vertigo/effects/_caption.scss
@@ -41,6 +41,7 @@ $zoe-bg: rgb(60,74,80) !default;
     display: block;
     min-height: 100%;
     opacity: 0.8;
+    max-width: none; // reset
   }
 
   figure figcaption {
@@ -76,6 +77,7 @@ $zoe-bg: rgb(60,74,80) !default;
   figure h2 {
     word-spacing: -0.15em;
     font-weight: 300;
+    color: inherit; // reset
   }
 
   figure h2 span {
